# stemma-soil-sensor-embassy

./: Cargo.toml  LICENSE  README.md
examples/rest-api/: .env  Cargo.toml  build.rs
examples/rest-api/.cargo/: config.toml
examples/rest-api/src/: main.rs
src/: error.rs  lib.rs  soil_sensor.rs
