[package]
name = "stemma-soil-sensor-embassy"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Interface with Adafruit's STEMMA Soil Sensor while using embassy"
readme = "README.md"
authors = ["Jonathan Rotter"]
categories = ["embedded", "no-std", "no-std::no-alloc"]
keywords = ["embassy", "rp2040", "stemma-soil-sensor", "raspberry-pi-pico-w"]
repository = "https://github.com/hydrogen602/stemma-soil-sensor-embassy"
documentation = "https://docs.rs/stemma-soil-sensor-embassy/latest/stemma_soil_sensor_embassy/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror-no-std = "2.0.2"
embassy-rp = { version = "0.1.0", features = [
  "time-driver",
  "critical-section-impl",
] }
embassy-time = "0.3.0"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
defmt = { version = "0.3", optional = true }
picoserve = { version = "0.9.1", features = ["embassy"], optional = true }


[features]
default = []

## Implements IntoResponse for all error types to make integration with picoserve easier
picoserve = ["dep:picoserve"]

## Defmt logging support. Implements `defmt::Format` for all error types.
defmt = [
  "dep:defmt",
  "embassy-rp/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
]
