[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
stemma-soil-sensor-embassy = { path = "../..", features = [
  "defmt",
  "picoserve",
] }

picoserve = { version = "0.9.1", features = ["embassy"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "dhcpv4"] }
embassy-rp = { version = "0.1.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
] }
embassy-executor = { version = "0.5.0", features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
  "nightly",
] }
embassy-time = { version = "0.3.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8.5", default-features = false }
static_cell = { version = "2", features = ["nightly"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
